# mol

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
assets/: benzene.mol2
src/: bounding_box.rs  camera_controller.rs  chemcore_exploration_tests.rs  debug.rs  element.rs  embedded_asset_plugin.rs  handler.rs  init_wasm_log.rs  lib.rs  linear_alkane.rs  load_mol2.rs  main.rs  mol.rs  mol2_asset_plugin.rs  rotator.rs  scene.rs  scratchpad_3d.rs  smiles.rs  system.rs  system_3d.rs  ui.rs  ui_events.rs  ui_handlers.rs  ui_helpers.rs
src/asset/: 1ubq.mol2  2bbv.mol2
src/mol/: comp.rs  component.rs  handler.rs  mod.rs  resource.rs  scene.rs  system.rs
src/scene/: comp.rs  component.rs  event.rs  helper.rs  mod.rs  resource.rs  system.rs  system_mol_gen.rs
src/ui/: comp.rs  component.rs  event.rs  handler.rs  helper.rs  marker.rs  mod.rs  resource.rs  setup.rs  system.rs
