[package]
name = "mol"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = { version = "0.14.2" }
bevy_simple_text_input = "0.9.2"
bevy_mod_picking = "0.20.1"
chemcore = "0.4"
gamma = "0.9.0"
anyhow = "1.0.90"
wasm-bindgen = "0.2.95"
log = "0.4.22"
wasm-logger = "0.2"

[profile.release]
strip = true
